# MiniC-Compiler

./: CMakeLists.txt
cmake/: Antlr4Cpp.cmake
grammars/: CMakeLists.txt  MiniC.g4
grammars/.antlr/: MiniC.interp  MiniCLexer.interp  MiniCLexer.java  MiniCLexer.tokens  MiniCParser.java
minicio/: CMakeLists.txt  minicio.h
src/: ASTBuilder.cpp  ASTBuilder.h  ASTChecker.cpp  ASTChecker.h  ASTNode.cpp  ASTNode.h  ASTPrinter.h  ASTVisitor.cpp  ASTVisitor.h  Alloca2Reg.cpp  CMakeLists.txt  Declarations.h  Exprs.cpp  Exprs.h  GrammarCompareChecker.cpp  GrammarCompareChecker.h  GrammarStatVisitor.cpp  GrammarStatVisitor.h  IRGenerator.cpp  IRGenerator.h  Program.h  Statements.h  SymbolTable.h  Terms.h  Types.h  VerifyAndBuildSymbols.cpp  VerifyAndBuildSymbols.h  main.cpp
tester/: asst6.py  tester.out  tester.py
tester/public_tests/: conds.c  hanoi.c  queen_time.c
